# rs-row2pgcopy

./: Cargo.toml  README.md
examples/array/: Cargo.toml
examples/array/src/: main.rs
examples/blob/: Cargo.toml
examples/blob/src/: main.rs
examples/float/: Cargo.toml
examples/float/src/: main.rs
examples/integer/: Cargo.toml
examples/integer/src/: main.rs
examples/nullable/: Cargo.toml
examples/nullable/src/: main.rs
examples/struct/: Cargo.toml
examples/struct/src/: main.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
examples/time/timestamp/: Cargo.toml
examples/time/timestamp/src/: main.rs
examples/time/timestampz/: Cargo.toml
examples/time/timestampz/src/: main.rs
examples/uuid/: Cargo.toml
examples/uuid/src/: main.rs
src/: blob.rs  header.rs  item.rs  lib.rs  time.rs  trailer.rs  uuid.rs
src/time/: primitive.rs  systemtime.rs
