[package]
name = "row2pgcopy"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies.serde]
version = "1.0"
default-features = false
features = [
	"std",
]

[dependencies.postgres-types]
version = "0.2"
default-features = false
features = [
	"with-time-0_3",
]

[dependencies.bytes]
version = "1.5"
default-features = false
features = [
	"std",
]
