[package]
name = "row2pgcopy"
version = "1.2.0"
edition = "2021"
description = "Simple Serializer for PGCOPY"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/row2pgcopy"
repository = "https://github.com/takanoriyanagitani/rs-row2pgcopy"

[lints.rust]
unsafe_code = "forbid"

[dependencies.serde]
version = "1.0"
default-features = false
features = [
	"std",
]

[dependencies.postgres-types]
version = "0.2"
default-features = false
features = [
	"with-time-0_3",
]

[dependencies.bytes]
version = "1.5"
default-features = false
features = [
	"std",
]

[dependencies.time]
version = "0.3"
optional = true
default-features = false
features = [
	"std",
	"parsing",
]

[features]
default = [
	"time_primitive",
]

time_primitive = [
	"time",
]
